--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<ul>
 							<li><a href="#intro">About</a></li>
 							<li><a href="#one">Research</a></li>
-							<li><a href="#two">Apps</a></li>
+							<li><a href="#two">Work Experience</a></li>
 							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
@@ -87,17 +87,22 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
+							<h2>Work Experience</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="features">
+                                <section>
+                                    <span class="icon major fa-code"></span>
+                                    <h3>Data-driven Inference Group, MIT CSAIL (Summer 2016)</h3>
+                                    <p>Research intern at </p>
+                                </section>
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Jana, Retention (Summer 2015)</h3>
+									<p>Software engineer for Jana Mobile.</p>
 								</section>
 								<section>
-									<span class="icon major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
+									<span class="icon major fa-code"></span>
+									<h3>Thasos Group (Summer 2014)</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
@@ -156,18 +161,19 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
+											<span>256 Elm Street<br />
+											New Haven, CT 06520-8234<br />
 											USA</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">derek.lo@yale.edu</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>(781) 974-9782</span>
 										</li>
+                                        <!--
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
@@ -178,6 +184,7 @@
 												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
+                                        -->
 									</ul>
 								</section>
 							</div>
@@ -190,7 +197,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Derek T. Lo. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
