--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/pic01.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Modeling the spread of the Zika virus using topological data analysis</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>We use the Vietoris-Rips filtration on the locations of the mosquitoes in Brazil to create simplicial complexes, from which we extract homology group generators. Previously epidemiologists have not relied on topological data analysis to model disease spread. A statistical comparison of these topological features to more standard measures demonstrates the value of these techniques for the improved assessment of vector-borne diseases.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="https://arxiv.org/abs/1612.03554" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -63,9 +63,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Assessing the severity of essential tremor using the Apple Watch</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>An estimated 2.2% of the US population suffers from essential tremor and is known to be one of the most frequently reported movement disorders. Using existing sensors, we seek to develop software that can assess tremor severity objectively and precisely. This has applications both in the clinic and also in the field. Doctors can use the software and sensor device to quantify more exactly the degree of severity in their patients’ tremors.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="http://derektlo.github.io/tremor.pdf" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -74,10 +74,10 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Video Stabilization</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+									<h2>Immproving human motion tracking using video stabilization</h2>
+									<p>While working as a research assistant at MIT CSAIL's Data-driven Inference Group, I worked on improving and creating video-based motion tracking methods for assessing the severity of movement tasks performed by ataxia patients. Initially, the videos in our dataset were filmed using hand-held cameras, resulting in excess camera motion due to panning, zooming and shaking. Certain motion-tracking techniques rely on optical flow, so this excess motion adds unwanted noise. Ideally, the motion in each video would be due to only the patient’s movement task. To stabilize the videos, I designed and implemented a stabilization algorithm.</p>
+                                    <ul class="actions">
+										<li><a href="http://derektlo.github.io/stabilization.pdf" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
