--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/pic03.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Immproving human motion tracking using video stabilization</h2>
@@ -105,6 +105,11 @@
 									<h3>Thasos Group (Summer 2014)</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+                                <section>
+                                    <span class="icon major fa-code"></span>
+                                    <h3>MIT App Inventor, MIT CSAIL (Summer 2014)</h3>
+                                    <p>Research intern at </p>
+                                </section>
 							</div>
                             <!--
 							<ul class="actions">
@@ -118,7 +123,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Please feel free to get in touch with me!</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
