--- a/index.html
+++ b/index.html
@@ -88,26 +88,29 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Work Experience</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="features">
                                 <section>
                                     <span class="icon major fa-code"></span>
-                                    <h3>Data-driven Inference Group, MIT CSAIL (Summer 2016)</h3>
-                                    <p>Research intern at </p>
+                                    <h3>Data-driven Inference Group, MIT CSAIL</h3>
+                                    <h4>Summer 2016</h4>
+                                    <p>Developed a general video stabilization solution to stabilize videos using OpenCV and Python. Retrained and fine-tuned an existing convolutional neural network used for pose estimation to create a direct method for joint tracking.</p>
                                 </section>
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Jana, Retention (Summer 2015)</h3>
-									<p>Software engineer for Jana Mobile.</p>
+									<h3>Jana, Retention</h3>
+                                    <h4>Summer 2015</h4>
+									<p>Created an analytics model to understand user behavior and integrated it into Jana’s Android app, mCent. Improved the front-end user interface for mCent and enhanced the app’s stability</p>
 								</section>
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Thasos Group (Summer 2014)</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Thasos Group</h3>
+                                    <h4>Summer 2014</h4>
+									<p>Developed web-scrapers to collect relevant data and implemented a financial trading backtest platform in Python. Managed Mechanical Turk workers to geo-fence regions of interest</p>
 								</section>
                                 <section>
                                     <span class="icon major fa-code"></span>
-                                    <h3>MIT App Inventor, MIT CSAIL (Summer 2014)</h3>
+                                    <h3>MIT App Inventor, MIT CSAIL</h3>
+                                    <h4>Summer 2013</h4>
                                     <p>Research intern at </p>
                                 </section>
 							</div>
