--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     <span class="icon major fa-code"></span>
                                     <h3>MIT App Inventor, MIT CSAIL</h3>
                                     <h4>Summer 2013</h4>
-                                    <p>Research intern at </p>
+                                    <p>Built tests for the core features of App Inventor and developed several end-user tutorials.</p>
                                 </section>
 							</div>
                             <!--
