--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
 							<a href="#" class="image"><img src="images/pic03.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Immproving human motion tracking using video stabilization</h2>
+									<h2>Improving human motion tracking using video stabilization</h2>
 									<p>While working as a research assistant at MIT CSAIL's Data-driven Inference Group, I worked on improving and creating video-based motion tracking methods for assessing the severity of movement tasks performed by ataxia patients. Initially, the videos in our dataset were filmed using hand-held cameras, resulting in excess camera motion due to panning, zooming and shaking. Certain motion-tracking techniques rely on optical flow, so this excess motion adds unwanted noise. Ideally, the motion in each video would be due to only the patient’s movement task. To stabilize the videos, I designed and implemented a stabilization algorithm.</p>
+                                    <!--
                                     <ul class="actions">
 										<li><a href="http://derektlo.github.io/stabilization.pdf" class="button">Learn more</a></li>
 									</ul>
+                                    -->
 								</div>
 							</div>
 						</section>
@@ -126,7 +128,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Please feel free to get in touch with me!</p>
+							<p>Please feel free to contact me!</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -143,7 +145,7 @@
 											<textarea name="message" id="message" rows="5"></textarea>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><a href="mailto:derek.lo@yale.edu" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
