--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 											<textarea name="message" id="message" rows="5"></textarea>
 										</div>
 										<ul class="actions">
-											<li><a href="mailto:derek.lo@yale.edu" class="button submit">Send Message</a></li>
+											<li><a href="mailto:derek.lo@yale.edu">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
