--- a/index.html
+++ b/index.html
@@ -93,25 +93,25 @@
 							<div class="features">
                                 <section>
                                     <span class="icon major fa-code"></span>
-                                    <h3>Data-driven Inference Group, MIT CSAIL</h3>
+                                    <h3>MIT Data-driven Inference Group, MIT CSAIL, Research Assistant</h3>
                                     <h4>Summer 2016</h4>
                                     <p>Developed a general video stabilization solution to stabilize videos using OpenCV and Python. Retrained and fine-tuned an existing convolutional neural network used for pose estimation to create a direct method for joint tracking.</p>
                                 </section>
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Jana, Retention</h3>
+									<h3>Jana, Software Engineer</h3>
                                     <h4>Summer 2015</h4>
 									<p>Created an analytics model to understand user behavior and integrated it into Jana’s Android app, mCent. Improved the front-end user interface for mCent and enhanced the app’s stability</p>
 								</section>
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Thasos Group</h3>
+									<h3>Thasos Group, Software Engineer</h3>
                                     <h4>Summer 2014</h4>
 									<p>Developed web-scrapers to collect relevant data and implemented a financial trading backtest platform in Python. Managed Mechanical Turk workers to geo-fence regions of interest</p>
 								</section>
                                 <section>
                                     <span class="icon major fa-code"></span>
-                                    <h3>MIT App Inventor, MIT CSAIL</h3>
+                                    <h3>MIT App Inventor, MIT CSAIL, Research Assistant</h3>
                                     <h4>Summer 2013</h4>
                                     <p>Built tests for the core features of App Inventor and developed several end-user tutorials.</p>
                                 </section>
