Links to pictures

--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.png" alt="" data-position="center center" /></a>
+							<a href="https://arxiv.org/abs/1612.03554" target='_blank' class="image"><img src="images/pic01.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Modeling the spread of the Zika virus using topological data analysis</h2>
 									<p>We use the Vietoris-Rips filtration on the locations of the mosquitoes in Brazil to create simplicial complexes, from which we extract homology group generators. Previously epidemiologists have not relied on topological data analysis to model disease spread. A statistical comparison of these topological features to more standard measures demonstrates the value of these techniques for the improved assessment of vector-borne diseases.</p>
 									<ul class="actions">
-										<li><a href="https://arxiv.org/abs/1612.03554" class="button">Learn more</a></li>
+										<li><a href="https://arxiv.org/abs/1612.03554" class="button" target='_blank'>Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.png" alt="" data-position="top center" /></a>
+							<a href="http://derektlo.github.io/tremor.pdf" target='_blank' class="image"><img src="images/pic02.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Assessing the severity of essential tremor using the Apple Watch</h2>
 									<p>An estimated 2.2% of the US population suffers from essential tremor and is known to be one of the most frequently reported movement disorders. Using existing sensors, we seek to develop software that can assess tremor severity objectively and precisely. This has applications both in the clinic and also in the field. Doctors can use the software and sensor device to quantify more exactly the degree of severity in their patients’ tremors.</p>
 									<ul class="actions">
-										<li><a href="http://derektlo.github.io/tremor.pdf" class="button">Learn more</a></li>
+										<li><a href="http://derektlo.github.io/tremor.pdf" class="button" target='_blank'>Learn more</a></li>
 									</ul>
 								</div>
 							</div>
