--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
 											<textarea name="message" id="message" rows="5"></textarea>
 										</div>
 										<ul class="actions">
-											<li><a href="mailto:derek.lo@yale.edu" class="submit button">Send Message</a></li>
-										</ul>
+											<!-- <li><a href="mailto:derek.lo@yale.edu" class="submit button">Send Message</a></li> -->
+                                            <li><a href="mailto:derek.lo@yale.edu">Send Message</a></li>
+                                        </ul>
 									</form>
 								</section>
 								<section>
